--- a/roles/docker/tasks/main.yaml
+++ b/roles/docker/tasks/main.yaml
@@ -11,7 +11,7 @@
 #   register: codename
 - name: Add Docker repository to the Apt sources
   apt_repository:
-    repo: 'deb [signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu jammy stable/'
+    repo: 'deb [signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu noble stable/'
     state: present
     filename: docker
 # - name: Add Docker repository to the Apt sources
@@ -19,15 +19,22 @@
 #     repo: 'deb [signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu jammy stable/'
 #     state: present
 #     filename: jammy
+#
+- name: Update the apt packages cache
+  apt:
+    update_cache: yes
+- name: Upgrade the packages
+  command: apt upgrade
 - name: Install Docker and its Dependencies
   apt:
     name: "{{ docker_packages }}"
     state: present
     update_cache: yes
-- name: Add user react to the docker group
-  user:
-    name: react
-    group: docker
+- name: Start and enable Containerd
+  systemd: 
+    name: containerd
+    enabled: yes
+    state: started
 - name: Start and enable Docker
   systemd:
     name: docker
