--- a/roles/kubernetes-worker/tasks/main.yaml
+++ b/roles/kubernetes-worker/tasks/main.yaml
@@ -3,12 +3,12 @@
 - name: Copy the Shell Script to the remote host
   copy:
     src: /home/ansible/ansible/React-App/systemd_cgroup.sh
-    dest: /home/react/systemd_cgroup.sh
+    dest: /home/worker-node/systemd_cgroup.sh
     mode: '0755'
 - name: Enable systemd as the Cgroup manager in the containerd config file
   shell: ./systemd_cgroup.sh
   args:
-    chdir: /home/react/
+    chdir: /home/worker-node/
 # kubelet will not start on the Master node if the swap is enabled, so we are removing any swap entries in fstab file and disabling swap
 - name: Unmount swap filesystems
   mount:
@@ -53,25 +53,10 @@
   systemd:
     name: containerd
     state: restarted
-# - name: Initialize the Kubernetes Cluster using kubeadm
-#  command: kubeadm init
-# kubeadm command generates admin.conf file and does pre-flight checks if the master node is suitable for running the cluster.
-- name: Setup the kube config file for the react user to access the Kubernetes cluster
-  shell: |
-    mkdir -p /home/react/.kube
-    touch /home/react/.kube/config
-    cp /etc/kubernetes/admin.conf /home/react/.kube/config
-    chown react:react /home/react/.kube/config
-#- name: Setup the Container Networking Interface Plugin Calico
-#  become: false
-#  command: kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.0/manifests/tigera-operator.yaml
-# Generate kube join command for joining the node to the Kubernetes cluster
-- name: Generate kube join command and store the output in a variable
-  command: kubeadm token create --print-join-command
-  register: join_command
-- name: Copy the std out of the join command to a file
-  shell: echo "{{ join_command.stdout }}" > /home/react/join_command.sh
-#- name: Copy file to worker host using SCP
-#  command: scp /home/react/join_command worker-node@13.232.39.205:/home/worker-node/join_command.sh
-- name: Remove taints from the nodes
-  command: kubectl taint nodes --all node.kubernetes.io/not-ready-
+- name: Provide execute permissions to the join_command file
+  command: chmod +x /home/worker-node/join_command.sh
+- name: Run the join command to join the K8s cluster
+  shell: ./join_command.sh
+  args:
+    chdir: /home/worker-node/
+    executable: /bin/bash
