--- a/roles/docker/tasks/main.yaml
+++ b/roles/docker/tasks/main.yaml
@@ -9,11 +9,14 @@
 # - name: Print Version Codename
 #   shell: . /etc/os-release && echo "$VERSION_CODENAME"
 #   register: codename
-- name: Add Docker repository to the Apt sources
-  apt_repository:
-    repo: 'deb [signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu noble stable/'
-    state: present
-    filename: docker
+- name: Add the apt repository
+  shell: echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+#- name: Add Docker repository to the Apt sources
+#  apt_repository:
+#    repo: 'deb [signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu noble stable/'
+#    state: present
+#    filename: docker
 # - name: Add Docker repository to the Apt sources
 #   apt_repository:
 #     repo: 'deb [signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu jammy stable/'
