--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -3,11 +3,12 @@ kind: Ingress
 metadata:
   name: react-app-ingress
 spec:
+  ingressClassName: nginx
   rules:
   - host: react-app.com
     http:
       paths:
-      - path: /
+      - path: /sample
         pathType: Prefix
         backend:
           service:
