--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -3,11 +3,11 @@ kind: Service
 metadata:
   name: react-app-service
 spec:
+  type: NodePort
   selector:
     app: react-app
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
-  type: LoadBalancer
 
